--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
 </head>
 <body>
     <div id="app">
-        <div class="name">{{name}}</div>
-
+        <div class="name">{{name1}}</div>
+	<div class="age">{{age}}</div>
     </div>
     <script>
         new Vue({
             el:'#app',
             data:{
-                name:'tzf'
+                name:'tzf',
+		        age:6,
+		        name1:'tgs'
             }
         })
     </script>
