--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="app">
-        <div class="name">{{name}}</div>
+        <div class="name">{{name1}}</div>
 
     </div>
     <script>
