--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
 
 <body>
     <div id="app">
-
-	
         <div class="name">{{name1}}</div>
         <div class="age">{{value}}</div>
         <button @click='(value >0 ? value-- : value++)'>click me</button>
-
+        sdewe23231321
     </div>
     <script>
         new Vue({
@@ -30,5 +28,4 @@
         })
     </script>
 </body>
-
 </html>
