--- a/index.html
+++ b/index.html
@@ -1,31 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
-
 <body>
-    <div id="app">
-        <div class="name">{{name1}}</div>
-        <div class="age">{{value}}</div>
-        <button @click='(value >0 ? value-- : value++)'>click me</button>
-        sdewe23231321
+    <div class="wrapper">
+        <div class="box">111111</div>
     </div>
-    <script>
-        new Vue({
-            el: '#app',
-            data: {
-                name: 'tzf',
-                age: 6,
-                name1: 'tgs',
-                value: 0
-            }
-        })
-    </script>
 </body>
 </html>
