--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="wrapper">
         <div class="box">111111</div>
+        <div class="box2">1212121212</div>
     </div>
 </body>
 </html>
